Fix scrollbars on userlist and container

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -150,7 +150,7 @@ ul.chat-messages{
 	position:fixed;
 	width:inherit;
 	height: calc(~"100% - 200px");
-	overflow:scroll;
+	overflow:auto;
 	li{
 		border-radius:5px;
 		box-shadow:0 1px 2px rgba(0,0,0,0.5);
@@ -184,6 +184,7 @@ ul.chat-messages{
 .container{
 	height:100%;	
 	margin-top: 60px;
+	overflow-x:hidden;
 }
 
 .main-view{
